--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ img {
 
 /* === ХЕРО === */
 .hero {
-    background: url(alexandra_bosco/blob/main/img/img_foto.jpg) no-repeat center center/cover;
+    background: url(main/img/img_foto.jpg) no-repeat center center/cover;
     height: 100vh;
     color: #000;
     display: flex;
