--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ img {
     padding: 40px 20px;
 }
 .hero-content {
+    color: #fff;
     font-weight: 100;
     font-size: 60px;
     text-align: right;
