--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,57 @@ img {
     0% { transform: translateX(0); }
     100% { transform: translateX(-100%); }
 }
+.gallery-container {
+    position: relative;
+    width: 500px; /* Примерная ширина */
+    margin: 0 auto;
+}
+
+.gallery {
+    display: flex;
+    overflow: hidden; /* Скрываем все изображения кроме активного */
+}
+
+.gallery img {
+    width: 100%;
+    display: none; /* Скрываем все изображения по умолчанию */
+}
+
+.gallery img:first-child {
+    display: block; /* Показываем первое изображение */
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    user-select: none;
+}
+
+.prev {
+    left: 0;
+    background-color: rgba(255, 255, 255, 0);
+    border: 0 solid #ffffff00;
+}
+
+.next {
+    right: 0;
+    background-color: rgba(255, 255, 255, 0);
+    border: 0 solid #ffffff00;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(255, 255, 255, 0);
+    border: 0 solid #ffffff00;
+
+}
 
 /* === КУРСЫ === */
 .courses {
