--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body {
 html, body, .stage, .ring, .img {
     width:100%;
     height: 100%;
-    transform-style: preserve-3d;
     user-select:none;
 }
 h1, h2, h3 {
@@ -29,7 +28,7 @@ img {
     height: auto;
 }
 .container {
-    max-width: 1200px;
+    max-width: 900px;
     margin: 0 auto;
     padding: 30px 20px;
 }
@@ -75,9 +74,9 @@ img {
 /* === УСЛУГИ === */
 .services {
     display: flex;
-    max-width: 900px;
-    padding-left: 150px;
     flex-wrap: wrap;
+    max-width: fit-content;
+    margin: 0 auto;
     gap: 20px;
     justify-content: center;
 }
