--- a/css/style.css
+++ b/css/style.css
@@ -152,73 +152,53 @@ img {
 }
 
 /* === ГАЛЕРЕЯ === */
-.gallery h2 {
-    text-align: center;
+
+.gallery-container {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 890px;
+}
+.gallery-track {
+    display: flex;
+    width: max-content;
+    animation: scroll 40s linear infinite;
+    cursor: grab;
 }
 .gallery-track img {
-    width: 300px;
-    border-radius: 10px;
-}
-@keyframes scroll {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-100%); }
-}
-.gallery-container {
-    position: relative;
-    width: 900px; /* Примерная ширина */
-    padding: 0;
-    margin: 0 auto;
-}
-
-.gallery {
-    background-color: #333;
-    overflow: auto;
-    white-space: nowrap;
-    padding: 10px;
-}
-
-.gallery img {
-    width: 100%;
-    display: none; /* Скрываем все изображения по умолчанию */
-}
-
-.gallery img:first-child {
-    display: block; /* Показываем первое изображение */
-}
-
-.prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
     width: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-top: -22px;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
     user-select: none;
-}
-
-.prev {
-    left: 0;
-    background-color: rgba(255, 255, 255, 0);
-    border: 0 solid #ffffff00;
-}
-
-.next {
-    right: 0;
-    background-color: rgba(255, 255, 255, 0);
-    border: 0 solid #ffffff00;
-}
-
-.prev:hover, .next:hover {
-    background-color: rgba(255, 255, 255, 0);
-    border: 0 solid #ffffff00;
+    pointer-events: none;
+    border: 1px solid #b0b0b0a9;
+    border-radius: 10px;
 
 }
+.gallery-track:hover img {
+    transform: scale(1.05);
+    filter: grayscale(0%);
+}
 
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+/* Адаптив */
+@media (max-width: 768px) {
+  .gallery-container {
+    height: 200px;
+  }
+  .gallery-track img {
+    height: 200px;
+  }
+}
 /* === КУРСЫ === */
 .courses {
     padding: 30px 0;
@@ -234,8 +214,6 @@ img {
 .courses summary {
     font-weight: bold;
 }
-
-/* === ОТЗЫВЫ === */
 
 
 /* === КОНТАКТЫ === */
