--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ img {
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: 890px;
+    height: auto;
 }
 .gallery-track {
     display: flex;
