--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ img {
 }
 /* === КУРСЫ === */
 .courses {
-    padding: 0;
+    padding: 30px 0;
 }
 .courses details {
     background: #ffffff;
