--- a/css/style.css
+++ b/css/style.css
@@ -182,8 +182,8 @@ img {
 }
 
 @keyframes scroll {
-  0% {
-    transform: translateX(0);
+  50% {
+    transform: translateX(50%);
   }
   100% {
     transform: translateX(-50%);
