--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ img {
     font-weight: 200;
     font-size: 60px;
     text-align: right;
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 1px #fff;
 }
 .hero-item {
     display: flex;
@@ -295,6 +295,7 @@ footer {
         padding: 20px;
     }
 }
+
 
 
 
