--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ img {
     font-weight: 200;
     font-size: 60px;
     text-align: right;
-    -webkit-text-stroke: 1px #fff;
+    color: white;
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 .hero-item {
     display: flex;
@@ -295,6 +296,7 @@ footer {
         padding: 20px;
     }
 }
+
 
 
 
